Update plugins; use JDK 11 for 6.2.0