@@ -60,14 +60,17 @@
     </developers>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.11</maven.compiler.source>
+        <maven.compiler.target>1.11</maven.compiler.target>
+
+        <maven.compiler.release>11</maven.compiler.release>
 
         <alfresco.distribution.version>6.2.0-ga</alfresco.distribution.version>
         <share.distribution.version>6.2.0</share.distribution.version>
 
         <alfresco.repo.core.version>7.22</alfresco.repo.core.version>
         <alfresco.share.core.version>7.5.6</alfresco.share.core.version>
+        <alfresco.safe.core.version>7.5.6</alfresco.safe.core.version>
 
         <alfresco.data-model.version>8.50.2</alfresco.data-model.version>
         <alfresco.repository.version>7.134.1</alfresco.repository.version>
@@ -324,6 +327,53 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <configuration>
+                        <source>${maven.compiler.target}</source>
+                        <target>${maven.compiler.target}</target>
+                        <release>${maven.compiler.release}</release>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                    </configuration>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+
+        <plugins>
+
+            <plugin>
+                <!-- enforcer is irrelevant for the parent POM itself -->
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
     <profiles>
         <profile>
